# bazel_rust_wasm_azure_functions

./: .gitignore  Cargo.toml  WORKSPACE  hexa.json  package-lock.json  package.json  readme.md  rust_wasm.bzl
functions/wasmify/: .gitignore  package-lock.json  package.json
functions/wasmify/wasm_gen/: function.json  generator.wasm  index.ts  wasm_loader.ts
src/: BUILD  lib.rs  main.js  main.rs  test.js
