[package]
name = "hello_world"
version = "0.1.0"
authors = ["Wassim Chegham <github@wassim.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.58"

[lib]
name = "hello_lib"
path = "lib/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello"
path = "src/main.rs"